Updated grails install to use environmental variable for grails version

--- a/3.0.1/Dockerfile
+++ b/3.0.1/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir /app
 WORKDIR /app
 CMD ["grails"]
 
-RUN gvm-wrapper install grails 3.0.1 && gvm-wrapper flush archives && gvm-exec grails help
+RUN gvm-wrapper install grails $GRAILS_VERSION && gvm-wrapper flush archives && gvm-exec grails help
